# eerk

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  eerk.yml
action/: collect-state.sh  eerk.yml
docs/superpowers/plans/: 2026-05-30-eerk.md
docs/superpowers/specs/: 2026-05-30-eerk-design.md
examples/: baseline.toml
src/: files.rs  lib.rs  main.rs  manifest.rs  policy.rs  render.rs  report.rs
tests/: check_integration.rs
