[package]
name = "eerk"
version = "0.1.1"
edition = "2021"
description = "Repo baseline & compliance checker"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"

[lib]
name = "eerk"
path = "src/lib.rs"

[[bin]]
name = "eerk"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
